Update Interval 1 Second, New Category: Used Memory

--- a/src/de/elmar_baumann/nbmemusage/Bundle.properties
+++ b/src/de/elmar_baumann/nbmemusage/Bundle.properties
@@ -5,14 +5,9 @@ OpenIDE-Module-Long-Description=\
     The Update Interval is 2 Seconds.
 OpenIDE-Module-Name=NetBeans: Statusline Memory Usage
 OpenIDE-Module-Short-Description=Displays the memory usage  in the IDE's status line
-SizeInfo.Exbibyte=Exbibyte (2^60 Bytes ~ Exabyte)
-SizeInfo.Gibibyte=Gibibyte (2^30 Bytes ~ Gigabyte)
-SizeInfo.Kibibyte=Kibibyte (2^10 Bytes ~ Kilobyte)
-SizeInfo.Mebibyte=Mebibyte (2^20 Bytes ~ Megabyte)
-SizeInfo.Pebibyte=Pebibyte (2^50 Bytes ~ Petabyte)
-SizeInfo.Tebibyte=Tebibyte (2^40 Bytes ~ Terabyte)
-MemoryUsageDetailsPanel.labelMaxMemoryPrompt.text=Verf\u00fcgbarer Speicher:
-MemoryUsageDetailsPanel.labelTotalMemoryPrompt.text=Belegter Speicher:
-MemoryUsageDetailsPanel.labelFreeMemoryPrompt.text=Freier Speicher:
+MemoryUsageDetailsPanel.labelMaxMemoryPrompt.text=Maximaler Speicher:
+MemoryUsageDetailsPanel.labelTotalMemoryPrompt.text=Von der VM allozierter Speicher:
+MemoryUsageDetailsPanel.labelFreeMemoryPrompt.text=Freier Speicher in der VM:
 MemoryUsageStatusLinePanel.buttonShowDetails.toolTipText=Details anzeigen
-MemoryUsageStatusLinePanel.labelTotalMemory.toolTipText=Belegter Speicher
+MemoryUsageStatusLinePanel.labelUsedMemory.toolTipText=Benutzter Speicher
+MemoryUsageDetailsPanel.labelUsedMemoryPrompt.text=Benutzter Speicher:
