Added popup menu with Garbage Collector invoke menu item

--- a/src/de/elmar_baumann/nbmemusage/Bundle.properties
+++ b/src/de/elmar_baumann/nbmemusage/Bundle.properties
@@ -11,3 +11,4 @@ MemoryUsageDetailsPanel.labelFreeMemoryPrompt.text=Freier Speicher in der VM:
 MemoryUsageStatusLinePanel.buttonShowDetails.toolTipText=Details anzeigen
 MemoryUsageStatusLinePanel.labelUsedMemory.toolTipText=Benutzter Speicher
 MemoryUsageDetailsPanel.labelUsedMemoryPrompt.text=Benutzter Speicher:
+GarbageCollectAction.Name=Garbage Collector aufrufen
